fix: fixed navbar logo on mobile screens by using a media query

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,3 +91,13 @@ h2 {
     width: 100%;
     height: 600px;
 }
+
+/* --------------------------------------------Media query */
+@media only screen and (max-width: 767px) {
+    /* nav */
+    .navbar-brand {
+        font-size: 2rem;
+        letter-spacing: 10px;
+        color: green;
+    }
+}
